# frost-zcash-demo

./: .gitignore  Cargo.toml  DEVELOPER.md  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md
.github/: dependabot.yml
.github/workflows/: coverage.yaml  main.yml
coordinator/: Cargo.toml  README.md
coordinator/src/: args.rs  cli.rs  comms.rs  input.rs  lib.rs  main.rs  round_1.rs  round_2.rs  step_1.rs  step_2.rs  step_3.rs  tests.rs
coordinator/src/comms/: cli.rs  http.rs  socket.rs
coordinator/src/tests/: steps.rs  values.md
coordinator/src/tests/common/: mod.rs
coordinator/tests/: integration_tests.rs
dkg/: Cargo.toml
dkg/src/: args.rs  cli.rs  comms.rs  inputs.rs  lib.rs  main.rs  output.rs  tests.rs  trusted_dealer_keygen.rs
dkg/src/comms/: cli.rs  http.rs
dkg/src/tests/: inputs.rs  inputs_tests.rs  integration_test.rs  output_tests.rs
dkg/src/tests/integration_test/: signature_gen.rs
dkg/tests/: integration_tests.rs
frost-client/: Cargo.toml  README.md
frost-client/src/: api.rs  args.rs  cipher.rs  ciphersuite_helper.rs  client.rs  config.rs  contact.rs  coordinator.rs  dkg.rs  group.rs  init.rs  lib.rs  login.rs  main.rs  participant.rs  session.rs  trusted_dealer.rs  util.rs  write_atomic.rs
frost-client/src/cli/: args.rs  config.rs  contact.rs  coordinator.rs  dkg.rs  group.rs  init.rs  participant.rs  session.rs  trusted_dealer.rs  write_atomic.rs
frost-client/src/coordinator/: Cargo.toml  README.md  args.rs  cli.rs  comms.rs  input.rs  main.rs  mod.rs  round_1.rs  round_2.rs  tests.rs
frost-client/src/coordinator/comms/: http.rs  socket.rs
frost-client/src/coordinator/tests/: steps.rs
frost-client/src/dkg/: Cargo.toml  README.md  args.rs  cli.rs  comms.rs  inputs.rs  main.rs
frost-client/src/dkg/comms/: cli.rs  http.rs
frost-client/src/dkg/tests/: inputs.rs
frost-client/src/participant/: README.md  args.rs  cli.rs  comms.rs  input.rs  main.rs  mod.rs  round1.rs  round2.rs  tests.rs
frost-client/src/participant/comms/: cli.rs  http.rs  socket.rs
frost-client/src/participant/tests/: cli.rs  round1.rs  round2.rs
frost-client/src/trusted_dealer/: Cargo.toml  README.md  args.rs  cli.rs  inputs.rs  main.rs  mod.rs  tests.rs  trusted_dealer.rs  trusted_dealer_keygen.rs
frost-client/src/trusted_dealer/tests/: integration_tests.rs  print_values.rs
frost-client/src/trusted_dealer/tests/helpers/: signature_gen.rs
frostd/: Cargo.toml  README.md
frostd/src/: cipher.rs  client.rs  functions.rs  lib.rs  main.rs  state.rs  types.rs  user.rs
frostd/tests/: integration_tests.rs
participant/: Cargo.toml  README.md
participant/src/: args.rs  cli.rs  comms.rs  lib.rs  main.rs  round1.rs  round2.rs  tests.rs
participant/src/comms/: cli.rs  http.rs  socket.rs
participant/src/tests/: cli.rs  lib.rs  round1.rs  round2.rs
participant/tests/: integration_tests.rs
server/: Cargo.toml  README.md
server/migrations/: 20240627222152_init.down.sql  20240627222152_init.up.sql
server/src/: args.rs  functions.rs  lib.rs  main.rs  state.rs  types.rs  user.rs
server/tests/: integration_tests.rs
src/: cli.rs  inputs.rs  keygen.rs  main.rs  output.rs  tests.rs  trusted_dealer_keygen.rs
src/tests/: inputs_tests.rs  integration_test.rs  integration_tests.rs  output_tests.rs
src/tests/integration_test/: signature_gen.rs
supply-chain/: config.toml
tests/: Cargo.toml
tests/tests/: integration_tests.rs
trusted-dealer/: Cargo.toml
trusted-dealer/src/: args.rs  cli.rs  inputs.rs  lib.rs  main.rs  output.rs  trusted_dealer_keygen.rs
trusted-dealer/src/tests/: inputs.rs  integration_test.rs  output_tests.rs  print_values.rs
trusted-dealer/src/tests/integration_test/: signature_gen.rs
trusted-dealer/tests/: integration_tests.rs
trusted-dealer/tests/helpers/: mod.rs
zcash-sign/: Cargo.toml  README.md
zcash-sign/src/: args.rs  generate.rs  lib.rs  main.rs  sign.rs  transaction_plan.rs
