[workspace]
members = [
    "participant",
    "trusted-dealer",
    "dkg",
    "coordinator",
    "tests",
    "frostd",
    "frost-client",
    "zcash-sign",
]
resolver = "2"

[patch.crates-io]
# TODO: remove this when https://github.com/zcash/orchard/issues/430 is fully
# addressed and a new release is made
orchard = { git = "https://github.com/conradoplg/orchard.git", rev = "f0c88b78a1d70d55ce6bb480566d132e57d5607b" }
