[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
eyre = "0.6.12"
frost-ed25519 = { version = "1.0.0", features = ["serde"] }
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "81c649c412e5b6ba56d491d2857f91fbd28adbc7", features = ["frost", "serde"] }
hex = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rand = "0.8"
serde_json = "1.0"
itertools = "0.12.1"
exitcode = "1.1.2"
clap = { version = "4.5.2", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
server = { path = "../server" }
tokio = { version = "1", features = ["full"] }
message-io = "0.18"

[features]
redpallas = ["server/redpallas"]
default = []
