[package]
name = "dkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
eyre = "0.6.12"
frost-core = { version = "2.0.0", features = ["serde"] }
frost-ed25519 = { version = "2.0.0", features = ["serde"] }
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "ed49e9ca0699a6450f6d4a9fe62ff168f5ea1ead", features = ["frost"] }
clap = { version = "4.5.23", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
rand = "0.8"
serde_json = "1.0"
frostd = { path = "../frostd" }
participant = { path = "../participant" }
xeddsa = "1.0.2"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
snow = "0.9.6"

[features]
default = []
