[package]
name = "dkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
eyre = { workspace = true }
frost-core = { workspace = true, features = ["serde"] }
frost-ed25519 = { workspace = true, features = ["serde"] }
reddsa = { workspace = true, features = ["frost"] }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
frostd = { workspace = true }
participant = { workspace = true }
xeddsa = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }
tokio = { workspace = true, features = ["full"] }
snow = { workspace = true }
zeroize = { workspace = true, features = ["serde", "zeroize_derive"] }

[features]
default = []
