[package]
name = "frost-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
snow = "0.9.6"
toml = "0.8.19"
server = { path = "../server" }
trusted-dealer = { path = "../trusted-dealer" }
coordinator = { path = "../coordinator" }
participant = { path = "../participant" }
eyre = "0.6.12"
rpassword = "7.3.1"
directories = "5.0.1"
dirs = "5.0.1"
hex = "0.4.3"
tokio = { version = "1.42", features = ["full"] }
serdect = "0.2.0"
bech32 = "0.11.0"
postcard = "1.1.1"
tempfile = "3.14.0"
serde_json = "1.0"
frost-core = { version = "2.0.0", features = ["serde"] }
frost-ed25519 = { version = "2.0.0", features = ["serde"] }
frost-rerandomized = { version = "2.0.0-rc.0", features = ["serde"] }
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "ed49e9ca0699a6450f6d4a9fe62ff168f5ea1ead", features = ["frost"] }
rand = "0.8"
stable-eyre = "0.2"
itertools = "0.13.0"