[package]
name = "frost-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }
serde = { workspace = true, features = ["derive"] }
snow = { workspace = true }
toml = { workspace = true }
eyre = { workspace = true }
rpassword = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serdect = { workspace = true }
bech32 = { workspace = true }
postcard = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
frost-core = { workspace = true, features = ["serde"] }
frost-ed25519 = { workspace = true, features = ["serde"] }
frost-rerandomized = { workspace = true, features = ["serde"] }
reddsa = { workspace = true, features = ["frost"] }
rand = { workspace = true }
stable-eyre = { workspace = true }
itertools = { workspace = true }
xeddsa = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true, features = ["serde", "zeroize_derive"] }
message-io = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
