[package]
name = "frostd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4.5.23", features = ["derive"] }
delay_map = "0.4.0"
derivative = "2.2.0"
eyre = "0.6.11"
frost-core = { version = "2.0.0", features = ["serde"] }
frost-rerandomized = { version = "2.0.0-rc.0", features = ["serde"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serdect = { version = "0.3.0" }
serde_json = "1.0.138"
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
xeddsa = "1.0.2"
futures-util = "0.3.31"
futures = "0.3.31"
thiserror = "2.0.11"
# ring is enabled due to the following issue:
# - we enable rustls for reqwest because it's required to workaround an issue
#   when adding root certificates (see test_http), and that imports rustls
#   with ring enabled
# - when ring is enabled, it requires manually initializing the ring CryptoProvider
#   in the server setup
# - compiling just frostd does not require reqwest, but it tries to initialize
#   the ring CryptoProvider, which is not available.
# For this reason we just simply always enable ring.
rustls = { version = "0.23.21", features = ["ring"] }

[dev-dependencies]
axum-test = "17.2.0"
frost-ed25519 = { version = "2.0.0", features = ["serde"] }
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "ed49e9ca0699a6450f6d4a9fe62ff168f5ea1ead", features = [
    "frost",
    "serde",
] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls-manual-roots"] }
regex = "1.11.1"
coordinator = { path = "../coordinator" }
rcgen = "0.13.2"
snow = "0.9.6"
tempfile = "3.16.0"

[features]
default = []
