[package]
name = "frostd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
clap = { workspace = true, features = ["derive"] }
delay_map = { workspace = true }
eyre = { workspace = true }
frost-client = { workspace = true }
frost-core = { workspace = true, features = ["serde"] }
frost-rerandomized = { workspace = true, features = ["serde"] }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serdect = { workspace = true }
serde_json = { workspace = true }
snow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
xeddsa = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true, features = ["serde", "zeroize_derive"] }
# ring is enabled due to the following issue:
# - we enable rustls for reqwest because it's required to workaround an issue
#   when adding root certificates (see test_http), and that imports rustls
#   with ring enabled
# - when ring is enabled, it requires manually initializing the ring CryptoProvider
#   in the server setup
# - compiling just frostd does not require reqwest, but it tries to initialize
#   the ring CryptoProvider, which is not available.
# For this reason we just simply always enable ring.
rustls = { workspace = true, features = ["ring"] }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls-manual-roots"] }


[dev-dependencies]
axum-test = { workspace = true }
frost-ed25519 = { workspace = true, features = ["serde"] }
reddsa = { workspace = true, features = ["frost", "serde"] }
regex = { workspace = true }
rcgen = { workspace = true }
snow = { workspace = true }
tempfile = { workspace = true }


[features]
default = []
