[package]
name = "participant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
derivative = "2.2.0"
frost-core = { version = "2.0.0", features = ["serde"] }
frost-rerandomized = { version = "2.0.0-rc.0", features = ["serde"] }
frost-ed25519 = { version = "2.0.0", features = ["serde"] }
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "ed49e9ca0699a6450f6d4a9fe62ff168f5ea1ead", features = ["frost"] }
hex = "0.4"
rand = "0.8"
eyre = "0.6.12"
exitcode = "1.1.2"
serde_json = "1.0"
serdect = { version = "0.2.0" }
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
message-io = "0.18"
reqwest = { version = "0.12.12", features = ["json"] }
frostd = { path = "../frostd" }
rpassword = "7.3.1"
snow = "0.9.6"
xeddsa = "1.0.2"

[features]
default = []
