[package]
name = "participant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
derivative = { workspace = true }
frost-core = { workspace = true, features = ["serde"] }
frost-rerandomized = { workspace = true, features = ["serde"] }
frost-ed25519 = { workspace = true, features = ["serde"] }
reddsa = { workspace = true, features = ["frost"] }
hex = { workspace = true }
rand = { workspace = true }
eyre = { workspace = true }
exitcode = { workspace = true }
serde_json = { workspace = true }
serdect = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
message-io = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
frostd = { workspace = true }
rpassword = { workspace = true }
snow = { workspace = true }
xeddsa = { workspace = true }

[features]
default = []
