[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
axum-macros = "0.4.2"
clap = { version = "4.5.23", features = ["derive"] }
derivative = "2.2.0"
eyre = "0.6.11"
frost-core = { version = "2.0.0", features = ["serde"] }
frost-rerandomized = { version = "2.0.0-rc.0", features = ["serde"] }
password-auth = "1.0.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serdect = { version = "0.2.0" }
serde_json = "1.0.133"
snow = "0.9.6"
sqlx = { version = "0.8.2", features = ["sqlite", "time", "runtime-tokio", "uuid"] }
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
axum-test = "16.4.0"
frost-ed25519 = { version = "2.0.0", features = ["serde"] }
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "ed49e9ca0699a6450f6d4a9fe62ff168f5ea1ead", features = [
    "frost",
    "serde",
] }
reqwest = { version = "0.12.9", features = ["json"] }
regex = "1.11.1"
coordinator = { path = "../coordinator" }

[features]
default = []
