[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# frost-ed25519 = { version = "2.0.0", features = ["serde"] }
frost-ed25519 = { path = "/home/conrado/zfnd/frost/frost-ed25519", features = ["serde"] }
# reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "ed49e9ca0699a6450f6d4a9fe62ff168f5ea1ead", features = ["frost"] }
reddsa = { path = "/home/conrado/zfnd/reddsa", features = ["frost"] }
hex = "0.4"
rand = "0.8"
exitcode = "1.1.2"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dkg = { path = "../dkg"}
trusted-dealer = { path = "../trusted-dealer"}
participant = { path = "../participant"}
coordinator = { path = "../coordinator"}
frostd = { path = "../frostd"}
rand = "0.8"

[features]
default = []
