[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
frost-ed25519 = { workspace = true, features = ["serde"] }
reddsa = { workspace = true, features = ["frost"] }
hex = { workspace = true }
rand = { workspace = true }
exitcode = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
frost-ed25519 = { workspace = true, features = ["serde"] }
dkg = { workspace = true }
trusted-dealer = { workspace = true }
participant = { workspace = true }
coordinator = { workspace = true }
frostd = { workspace = true }
rand = { workspace = true }

[features]
default = []
