[package]
name = "trusted-dealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frost-core = { version = "2.0.0-rc.0", features = ["serde"] }
frost-ed25519 = { version = "2.0.0-rc.0", features = ["serde"] }
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "4d8c4bb337231e6e89117334d7c61dada589a953", features = ["frost"] }
clap = { version = "4.5.8", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
hex = "0.4"
itertools = "0.13.0"
exitcode = "1.1.2"
serde_json = "1.0"

[features]
default = []

