[package]
name = "zcash-sign"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
halo2_gadgets = { workspace = true }
halo2_proofs = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
orchard = { workspace = true, features = ["unstable-frost"] }
rand = { workspace = true }
rand_core = { workspace = true }
sapling-crypto = { workspace = true }
serde = { workspace = true }
serde-hex = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
zcash_address = { workspace = true }
zcash_client_backend = { workspace = true, features = ["orchard"] }
zcash_encoding = { workspace = true }
zcash_keys = { workspace = true, features = ["test-dependencies", "orchard"] }
zcash_primitives = { workspace = true }
zcash_proofs = { workspace = true, features = ["bundled-prover"] }
zcash_protocol = { workspace = true }
