[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
eyre = { workspace = true }
frost-core = { workspace = true, features = ["serde"] }
frost-rerandomized = { workspace = true, features = ["serde"] }
frost-ed25519 = { workspace = true, features = ["serde"] }
reddsa = { workspace = true, features = ["frost", "serde"] }
hex = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serdect = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }
frostd = { workspace = true }
tokio = { workspace = true, features = ["full"] }
message-io = { workspace = true }
rpassword = { workspace = true }
snow = { workspace = true }
xeddsa = { workspace = true }

[features]
default = []
