[package]
name = "trusted-dealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frost-core = { workspace = true, features = ["serde"] }
frost-rerandomized = { workspace = true, features = ["serde"] }
frost-ed25519 = { workspace = true, features = ["serde"] }
reddsa = { workspace = true, features = ["frost"] }
clap = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }

[features]
default = []

